# spark-data-patterns

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: conftest.py  test_pyspark.py  test_reading_delta.py  test_reading_hudi.py  test_reading_xlsx.py
tests/fixtures/simple.delta/: .part-00000-f1145e38-14c8-4eda-8190-f21a883d1132-c000.snappy.parquet.crc  .part-00007-2d6670db-6c2c-4b0f-8b09-75db6cd20045-c000.snappy.parquet.crc  .part-00015-cdb7930c-36a4-44dd-8f3e-a8f10832f32a-c000.snappy.parquet.crc  part-00000-f1145e38-14c8-4eda-8190-f21a883d1132-c000.snappy.parquet  part-00007-2d6670db-6c2c-4b0f-8b09-75db6cd20045-c000.snappy.parquet  part-00015-cdb7930c-36a4-44dd-8f3e-a8f10832f32a-c000.snappy.parquet
tests/fixtures/simple.delta/_delta_log/: .00000000000000000000.json.crc
tests/fixtures/simple.hudi/.hoodie/: .20240915233157215.commit.crc  .hoodie.properties.crc  20240915233157215.commit  hoodie.properties
tests/fixtures/simple_data.parquet/: .part-00000-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet.crc  .part-00005-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet.crc  .part-00010-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet.crc  .part-00015-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet.crc  part-00000-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet  part-00005-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet  part-00010-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet  part-00015-0fdf5e53-9152-402a-ba36-9da3a21ad830-c000.snappy.parquet
(+25 files in other folders)
